--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
+.mainMenu {
+    background: green;
+    display: flex;
+    height: 2em;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .breadcrumbs {
-    padding: 10px 16px;
+    padding: 0.1em;
+    padding-left: 1em;
+    margin: 0;
     list-style: none;
     background-color: lightgreen;
 }
