--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,97 @@
-.mainMenu {
-    background: green;
-    display: flex;
-    height: 2em;
-    justify-content: space-evenly;
-    align-items: center;
+* {
+    box-sizing: border-box;
 }
 
-.breadcrumbs {
-    padding: 0.1em;
-    padding-left: 1em;
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
-    list-style: none;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+}
+
+.mainMenu {
+    display: flex;
+    flex-direction: column;
+    background: darkgreen;
+}
+
+@media (min-width: 576px) {
+    .mainMenu {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+
+.mainMenu > a {
+    color: white;
+    padding: 1vw 1.5vw;
+    text-decoration: none;
+    text-align: center;
+}
+
+.mainMenu > a:hover {
+    color: black;
     background-color: lightgreen;
 }
 
-.breadcrumbs li {
-    display: inline;
-    font-size: 75%;
+.breadcrumbs {
+    color: darkgreen;
+    background-color: lightgreen;
+    list-style: none;
+    margin-top: 0;
+    font-size: 0.7em;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+}
+
+@media (min-width: 576px) {
+    main {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+
+article {
+    flex: 70%;
+    padding: 1vw;
+}
+
+aside {
+    flex: 30%;
+    padding: 1vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+aside > img {
+    border-radius: 50%;
+    width: 70%;
+    max-width: fit-content;
+}
+
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    background: lightgreen;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+footer > p, .enlacesRedes > a {
+    margin-left: 1vw;
 }
