--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,14 @@
 }
 
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
+}
+
+h2 {
+    color: darkgreen;
 }
 
 header {
@@ -64,6 +68,26 @@ main {
 article {
     flex: 70%;
     padding: 1vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+article > p {
+    align-self: flex-start;
+}
+
+#opening {
+    padding: 1em;
+    width: 60%;
+    display: none;
+}
+
+@media (min-width: 576px) {
+    #opening {
+        display: initial;
+    }
 }
 
 aside {
@@ -81,6 +105,18 @@ aside > img {
     max-width: fit-content;
 }
 
+.techLogos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.techLogos > img {
+    width: 40%;
+    max-width: 200px;
+    padding: 1em;
+}
+
 footer {
     display: flex;
     flex-wrap: wrap;
@@ -92,6 +128,6 @@ footer {
     bottom: 0;
 }
 
-footer > p, .enlacesRedes > a {
+.enlacesRedes > a {
     margin-left: 1vw;
 }
