--- a/css/stylesPerfil.css
+++ b/css/stylesPerfil.css
@@ -5,8 +5,7 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
-    display: flex;
-    flex-direction: column;
+    display: grid;
 }
 
 h2 {
@@ -69,7 +68,71 @@ header {
     font-weight: bold;
 }
 
+main {
+    padding-bottom: 100px;
+    display: grid;
+    grid-template-rows: 4fr 1fr;
+}
 
+@media (min-width: 576px) {
+    main {
+        grid-template-rows: 3fr 1fr;
+    }
+}
+
+#art1 {
+    display: grid;
+    padding: 0.5em;
+    grid-template-rows: 0.5fr repeat(9, 1fr);
+    row-gap: 1em;
+}
+
+#art1 > header {
+    text-align: center;
+}
+
+@media (min-width: 576px) {
+    #art1 {
+        grid-template-rows: 0.35fr repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1em;
+    }
+
+
+    #art1 > header {
+        grid-row: 1;
+        grid-column: 1 / 4;
+    }
+}
+
+#art2 {
+    display: grid;
+    padding: 0.5em;
+    grid-template-rows: auto auto;
+    row-gap: 1em;
+}
+
+#art2 > header {
+    text-align: center;
+}
+
+#art1 > section,  #art2 > section {
+    border: 1px solid darkgreen;
+    background-color: lightgreen;
+    color: darkgreen;
+    border-radius: 1em;
+    text-align: center;
+    vertical-align: middle;
+}
+
+#art2 > section {
+    background-color: white;
+}
+
+span {
+    color: orangered;
+    font-weight: bolder;
+}
 
 footer {
     display: grid;
