Finalizado contacto y corregidos los márgenes de sobre mi

--- a/css/stylesPerfil.css
+++ b/css/stylesPerfil.css
@@ -134,6 +134,11 @@ span {
     font-weight: bolder;
 }
 
+h3, p {
+    margin-inline-start: 1em;
+    margin-inline-end: 1em;
+}
+
 footer {
     display: grid;
     grid-template-columns: 1fr repeat(2, auto) 1fr;
