--- a/css/stylesContacto.css
+++ b/css/stylesContacto.css
@@ -13,3 +13,9 @@ footer > .navbar {
 .navbar-text {
     padding-right: 1em;
 }
+
+main {
+    padding-bottom: 100px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: darkgreen;
+}
